--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>io.gravitee</groupId>
         <artifactId>gravitee-parent</artifactId>
-        <version>18-SNAPSHOT</version>
+        <version>18</version>
     </parent>
 
     <groupId>io.gravitee.platform</groupId>
