--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
     <groupId>io.gravitee.platform</groupId>
     <artifactId>gravitee-platform-repository-api</artifactId>
-    <version>1.2.1</version>
+    <version>1.3.0-archi-217-distributed-sync-SNAPSHOT</version>
 
     <name>Gravitee.io Platform - Repository - API</name>
 
